adding laptop lid interlude

--- a/src/assets/blog/theme.css
+++ b/src/assets/blog/theme.css
@@ -272,6 +272,7 @@
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 0.05em;
+  text-align: center;
 }
 
 .blog-badge-featured {
